Fixes code examples overflowing on mobile

--- a/site/css/custom.css
+++ b/site/css/custom.css
@@ -14,6 +14,7 @@ code {
 pre {
   white-space: pre;
   font-family: 'Hack', monospace;
+  overflow-x: auto;
 }
 
 .navbar {
